--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -57,7 +57,7 @@
           </li>
           <li class="divider"></li>
           <li>
-            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+            <%= link_to 'Sign out', destroy_user_session_path, :method => :delete, :class => "fa fa-fw fa-power-off" %>
           </li>
       </ul>
     </li>
