--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -47,7 +47,7 @@
       </a>
       <ul class="dropdown-menu">
           <li>
-            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+            <%= link_to "Profile" , users_show_path, :class => "fa fa-fw fa-user"%>
           </li>
           <li>
             <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
