Add test cases for API controllers

--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -15,7 +15,7 @@
     <% @attendances.each do |attendance| %>
       <tr>
         <td><%= attendance.practice %></td>
-        <td><%= attendance.player %></td>
+        <td><%= attendance.user %></td>
         <td><%= link_to 'Show', attendance %></td>
         <td><%= link_to 'Edit', edit_attendance_path(attendance) %></td>
         <td><%= link_to 'Destroy', attendance, method: :delete, data: { confirm: 'Are you sure?' } %></td>
