--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :player_id %>
-    <%= f.text_field :player_id %>
+    <%= f.label :user_id %>
+    <%= f.text_field :user_id %>
   </div>
 
   <div class="actions">
