--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Player:</strong>
-  <%= @attendance.player %>
+  <%= @attendance.user %>
 </p>
 
 <%= link_to 'Edit', edit_attendance_path(@attendance) %> |
