fix test case and add invite code

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -74,12 +74,12 @@
         <% end %>
       </li>
       <li>
-        <%= link_to locations_path do %>
-          <i class="fa fa-fw fa-table"></i>Locations
+        <%= link_to players_path do %>
+          <i class="fa fa-fw fa-table"></i>Players
         <% end %>
       </li>
       <li>
-        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
+        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Locations <i class="fa fa-fw fa-caret-down"></i></a>
           <ul id="demo" class="collapse">
             <li>
               <a href="#">Dropdown Item</a>
