--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -11,6 +11,21 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :handle %><br />
+    <%= f.text_field :handle %>
+  </div>
+
+  <div class="field">
+    <%= f.label :gender %><br />
+    <%= f.select :gender, Player.genders.keys %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
