--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -3,15 +3,21 @@
 <h1>Players</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<thead>
+  <tr>
+    <th>Name</th>
+    <th>Gender</th>
+    <th>Handle</th>
+    <th colspan="3"></th>
+  </tr>
+</thead>
 
   <tbody>
     <% @players.each do |player| %>
       <tr>
+        <td><%= player.name %></td>
+        <td><%= player.gender %></td>
+        <td><%= player.handle %></td>
         <td><%= link_to 'Show', player %></td>
         <td><%= link_to 'Edit', edit_player_path(player) %></td>
         <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
