Players API controller tests

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+    <%= f.label :full_name %><br />
+    <%= f.text_field :full_name, autofocus: true %>
   </div>
 
   <div class="field">
