--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,30 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Players</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <h2 class="page-header">
+      Players
+    </h2>
+  </div>
+  
+  <div class="col-lg-8">
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Handle</th>
+            <th>Gender</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @players.each do |player| %>
+          
+              <tr>
+                <td><%= link_to player.full_name, player %>
+                <td><%= player.handle %></td>
+                <td><%= player.gender %></td>
+              </tr>
 
-<table>
-<thead>
-  <tr>
-    <th>Name</th>
-    <th>Gender</th>
-    <th>Handle</th>
-    <th colspan="3"></th>
-  </tr>
-</thead>
-
-  <tbody>
-    <% @players.each do |player| %>
-      <tr>
-        <td><%= player.full_name %></td>
-        <td><%= player.gender %></td>
-        <td><%= player.handle %></td>
-        <td><%= link_to 'Show', player %></td>
-        <td><%= link_to 'Edit', edit_player_path(player) %></td>
-        <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
 <br>
 
