--- a/app/views/practices/_form.html.erb
+++ b/app/views/practices/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :date %>
-    <%= f.datetime_select :date %>
+    <%= f.date_select :date %>
   </div>
 
   <div class="field">
