--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -56,7 +56,9 @@
                   ]
                 end,
               xtitle: "Month",
-              ytitle: "\% Attended")%>
+              ytitle: "\% Attended",
+              min: 0,
+              max: 100)%>
       </div>
     </div>
   </div>
