--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -12,20 +12,18 @@
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Handle</th>
-            <th>Gender</th>
+            <th><%= sortable "full_name", "Name" %></th>
+            <th><%= sortable "handle", "Handle" %></th>
+            <th><%= sortable "gender", "Gender" %></th>
           </tr>
         </thead>
         <tbody>
           <% @players.each do |player| %>
-          
-              <tr>
-                <td><%= link_to player.full_name, player %>
-                <td><%= player.handle %></td>
-                <td><%= player.gender %></td>
-              </tr>
-
+            <tr>
+              <td><%= link_to player.full_name, player %>
+              <td><%= player.handle %></td>
+              <td><%= player.gender %></td>
+            </tr>
           <% end %>
         </tbody>
       </table>
