--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -12,13 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :practice_id %>
-    <%= f.text_field :practice_id %>
+    <%= f.label :practice %>
+    <%= f.select :practice, Practice.all.map { |p| format_date(p.date) } %>
   </div>
 
   <div class="field">
-    <%= f.label :user_id %>
-    <%= f.text_field :user_id %>
+    <%= f.label :player %>
+    <%= f.select :player_id, Player.all.map { |p| p.full_name } %>
+  </div>
+
+  <div class="field">
+    <%= f.label :status %>
+    <%= f.select :status, Attendance.statuses.keys.to_a %>
   </div>
 
   <div class="actions">
