--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -1,29 +1,39 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-lg-12">
+    <h2 class="page-header">
+      Attendances
+    </h2>
+  </div>
+  
+  <div class="col-lg-8">
+    <span>
+      <%= link_to 'New Attendance', new_attendance_path %>
+      <%= will_paginate @attendances %>
+    </span>
 
-<h1>Attendances</h1>
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover table-striped">
+        <thead>
+          <tr>
+            <th><%= sortable "practice_id", "Practice" %></th>
+            <th><%= sortable "player_id", "Player" %></th>
+            <th><%= sortable "status", "Status" %></th>
+            <th></th>
+          </tr>
+        </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Practice</th>
-      <th>Player</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <tbody>
+          <% @attendances.each do |attendance| %>
+            <tr>
+              <td><%= attendance.practice.date %></td>
+              <td><%= attendance.player.full_name %></td>
+              <td><%= attendance.status %></td>
+              <td><%= link_to 'Edit', edit_attendance_path(attendance) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
-  <tbody>
-    <% @attendances.each do |attendance| %>
-      <tr>
-        <td><%= attendance.practice %></td>
-        <td><%= attendance.user %></td>
-        <td><%= link_to 'Show', attendance %></td>
-        <td><%= link_to 'Edit', edit_attendance_path(attendance) %></td>
-        <td><%= link_to 'Destroy', attendance, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Attendance', new_attendance_path %>
