--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="row">
   <div class="col-lg-12">
     <h2 class="page-header">
@@ -8,6 +6,11 @@
   </div>
   
   <div class="col-lg-8">
+    <span>
+      <%= link_to 'New Player', new_player_path %>
+      <%= will_paginate @players %>
+    </span>
+
     <div class="table-responsive">
       <table class="table table-bordered table-hover table-striped">
         <thead>
@@ -30,7 +33,3 @@
     </div>
   </div>
 </div>
-
-<br>
-
-<%= link_to 'New Player', new_player_path %>
