--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="row">
   <div class="col-lg-12">
     <h2 class="page-header">
@@ -51,7 +49,7 @@
                 group_by_month { |att| att.practice.date }.
                 map do |k, v|
                   [
-                    k.strftime("%b %y"),
+                    format_by_month(k),
                     (v.select { |a| a.attend? }.count * 100.0 / v.count).to_s(:percentage)
                   ]
                 end,
