--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -1,35 +1,42 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-lg-12">
+    <h2 class="page-header">
+      Practices
+    </h2>
+  </div>
+  
+  <div class="col-lg-8">
+    <span>
+      <%= link_to 'New Practice', new_practice_path %>
+      <%= will_paginate @practices %>
+    </span>
 
-<h1>Practices</h1>
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover table-striped">
+        <thead>
+          <tr>
+            <th><%= sortable "date", "Date" %></th>
+            <th><%= sortable "location_id", "Location" %></th>
+            <th><%= sortable "start", "Time" %></th>
+            <th><%= sortable "status", "Status" %></th>
+            <th></th>
+          </tr>
+        </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Location</th>
-      <th>Date</th>
-      <th>Start</th>
-      <th>End</th>
-      <th>Status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @practices.each do |practice| %>
-      <tr>
-        <td><%= practice.location.name %></td>
-        <td><%= practice.date %></td>
-        <td><%= practice.start %></td>
-        <td><%= practice.end %></td>
-        <td><%= practice.status %></td>
-        <td><%= link_to 'Show', practice %></td>
-        <td><%= link_to 'Edit', edit_practice_path(practice) %></td>
-        <td><%= link_to 'Destroy', practice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Practice', new_practice_path %>
+        <tbody>
+          <% @practices.each do |practice| %>
+            <tr>
+              <td><%= link_to format_date(practice.date), practice %></td>
+              <td><%= link_to practice.location.name, practice.location %></td>
+              <td><%= "#{format_by_time(practice.start)} to #{format_by_time(practice.end)}" %></td>
+              <td class=<%= "practice-#{practice.status}"%> >
+                <%= practice.status %>
+              </td>
+              <td><%= link_to 'Edit', edit_practice_path(practice) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
