--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,35 +1,35 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-lg-12">
+    <h2 class="page-header">
+      Locations
+    </h2>
+  </div>
 
-<h1>Locations</h1>
+  <div class="col-lg-8">
+    <span>
+      <%= link_to 'New Location', new_location_path %>
+      <%= will_paginate @locations %>
+    </span>
 
-<table>
-  <thead>
-    <tr>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>Address</th>
-      <th>Name</th>
-      <th>Type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @locations.each do |location| %>
-      <tr>
-        <td><%= location.latitude %></td>
-        <td><%= location.longitude %></td>
-        <td><%= location.address %></td>
-        <td><%= location.name %></td>
-        <td><%= location.type %></td>
-        <td><%= link_to 'Show', location %></td>
-        <td><%= link_to 'Edit', edit_location_path(location) %></td>
-        <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Location', new_location_path %>
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover table-striped">
+        <thead>
+          <tr>
+            <th><%= sortable "name", "Name" %></th>
+            <th><%= sortable "type", "Type" %></th>
+            <th><%= sortable "address", "Address" %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @locations.each do |location| %>
+            <tr>
+              <td><%= link_to location.name, location %>
+              <td><%= location.type %></td>
+              <td><%= location.address %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
