--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -91,7 +91,9 @@
           </ul>
       </li>
       <li>
-        <a href="#"><i class="fa fa-fw fa-file"></i> Blank Page</a>
+        <%= link_to locations_path do %>
+          <i class="fa fa-fw fa-file"></i>Locations
+        <% end %>
       </li>
       <li>
         <a href="#"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
