slack bot oauth controller

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -96,7 +96,9 @@
         <% end %>
       </li>
       <li>
-        <a href="#"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
+        <%= link_to slack_bots_path do %>
+          <i class="fa fa-fw fa-file"></i>Slack Bot
+        <% end %>
       </li>
     </ul>
   </div>
