--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,1 @@
-<div class="row">
-  <div class="col-sm-12">
-    <%= button_to "Authorize Slack Bot", authorize_bot_path, :class => "btn btn-primary" %>
-  </div>
-</div>
+<h1>WIP</h1>
