--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -61,3 +61,26 @@
     </div>
   </div>
 </div>
+
+<div class="table-responsive">
+  <table class="table table-bordered table-hover table-striped">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Changed?</th>
+        <th>Reason</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @player.attendances.each do |attendance| %>
+        <tr>
+          <td><%= attendance.practice.date %></td>
+          <td><%= attendance.status %></td>
+          <td><%= attendance.status %></td>
+          <td><%= attendance.comment %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
