--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -15,7 +15,7 @@
 
         <p>
           <strong>Date:</strong>
-          <%= @practice.date %>
+          <%= best_in_place @practice, :date %>
 
         <p>
           <strong>Start:</strong>
@@ -38,13 +38,18 @@
 
 <div class="row">
   <div class="col-lg-6">
+
+    <span>
+      <%= will_paginate @attendees %>
+    </span>
+
     <div class="table-responsive">
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
-            <th><%= sortable "player_id", "Player" %></th>
+            <th><%= sortable "player.full_name", "Player" %></th>
             <th><%= sortable "status", "Status" %></th>
-            <th></th>
+            <th><%= sortable "confirm", "Confirm" %></th>
           </tr>
         </thead>
 
@@ -52,8 +57,16 @@
           <% @attendees.each do |attendee| %>
             <tr>
               <td><%= attendee.player.full_name %></td>
-              <td><%= attendee.status %></td>
-              <td><%= link_to 'Edit', edit_attendance_path(attendee) %></td>
+              <td>
+                <%= best_in_place attendee, :status,
+                    :as => :select, :collection => Attendance.statuses.keys.map {|k| [k,k] },
+                    value: attendee.status %>
+              </td>
+              <td>
+                <%= best_in_place attendee, :confirm,
+                    :as => :checkbox, collection: { false: "No", true: "Yes" },
+                    value: attendee.confirm %>
+              </td>
             </tr>
           <% end %>
         </tbody>
