add filter options for attendance status

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -228,3 +228,11 @@ ul.alert-dropdown {
 .practice-cancelled {
   color: "red";
 }
+
+a:visited.btn {
+  color: #fff;
+}
+
+.filter-options {
+  margin: 10px;
+}
