--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -18,7 +18,7 @@
             <th><%= sortable "full_name", "Name" %></th>
             <th><%= sortable "handle", "Handle" %></th>
             <th><%= sortable "gender", "Gender" %></th>
-            <th><%= sortable "attendance_record", "% Attendance" %></th>
+            <th><%= sortable "attendance_record", "\% Attendance" %></th>
           </tr>
         </thead>
         <tbody>
@@ -27,7 +27,7 @@
               <td><%= link_to player.full_name, player %>
               <td><%= player.handle %></td>
               <td><%= player.gender %></td>
-              <td><%= player.attendance_record %></td>
+              <td><%= player.attendance_record(@after) %></td>
             </tr>
           <% end %>
         </tbody>
