--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -84,8 +84,8 @@
               <% end %>
             </li>
             <li>
-              <%= link_to attendances_path do %>
-                <i class="fa fa-fw fa-bar-chart-o"></i>Charts
+              <%= link_to report_index_path do %>
+                <i class="fa fa-fw fa-bar-chart-o"></i>Report
               <% end %>
             </li>
           </ul>
