fix mobile view removing top nav

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -236,3 +236,9 @@ a:visited.btn {
 .filter-options {
   margin: 10px;
 }
+
+.main-body {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 50px;
+}
