--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <div class="container_fluid">
 
             <div class="row">
-              <div class="col-sm-12">
+              <div class="main-body col-sm-12">
                 <% if alert.present? %>
                   <p class="alert"><%= alert %></p>
                 <% end %>
