--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
 
       <div id="wrapper" class="container_fluid">
         <% if current_user.present? %>
-          <%= render "shared/nav" %>
+          <% if current_user.player? %>
+            <%= render "shared/nav" %>
+          <% elsif current_user.admin? %>
+            <%= render "shared/nav_admin" %>
+          <% end %>
         <% end %>
 
         <div id="page-wrapper">
