--- a/app/views/shared/_nav_admin.html.erb
+++ b/app/views/shared/_nav_admin.html.erb
@@ -40,7 +40,7 @@
     </li> -->
   </ul>
 
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
+  <div class="collapse navbar-collapse navbar-ex1-collapse col-sm-1">
     <ul class="nav navbar-nav side-nav">
       <li>
         <%= link_to practices_path do %>
