--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -246,7 +246,8 @@ a:visited.btn {
 .panel-body {
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: 0px;
+  display: flex;
+  align-items: center;
 }
 
 .month {
@@ -256,19 +257,23 @@ a:visited.btn {
 
 .date { 
   text-align: center;
-  height: 100%;
+  float: left;
+  display: inline-block;
 }
 
 .details {
   border-left: 1px solid #ccc;
+  display: inline-block;
 }
 
 .details > .row {
   margin-left: 0px;
+  margin-right: 0px;
 }
 
 .date_digit {
   margin: 0px;
+  font-size: 35px;
 }
 
 .practice_type {
